# edgedb

./: .gitmodules  Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml  setup.py
.github/: Makefile
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.dryrun.yml  build.ls-nightly.yml  build.nightly.yml  build.release.yml  build.testing.yml  docs.yml  dryrun.yml  ls-nightly.yml  nightly.yml  release.yml  testing.yml  tests-ha.yml  tests-inplace.yml  tests-managed-pg.yml  tests-patches.yml  tests-pg-versions.yml  tests-pool.yml  tests-reflection.yml  tests.ha.yml  tests.inplace7x.yml  tests.patches.yml  tests.pg-versions.yml  tests.reflection.yml  tests.yml
.github/workflows.src/: build.dryrun.tpl.yml  build.inc.yml  build.ls-nightly.targets.yml  build.ls-nightly.tpl.yml  build.ls.targets.yml  build.nightly.tpl.yml  build.release.tpl.yml  build.targets.yml  build.testing.tpl.yml  ls-build.inc.yml  ls-nightly.tpl.yml  nightly.tpl.yml  release.tpl.yml  render.py  tests.inc.yml  tests.inplace.tpl.yml  tests.inplace7x.tpl.yml  tests.tpl.yml
dev-notes/: concurrent-indexes.py
docs/: redirects.js
docs/changelog/: 2_x.rst
docs/intro/: cli.rst  clients.rst  index.rst  install_table.rst  installation.rst  instances.rst  localdev.rst  migrations.rst  projects.rst
docs/reference/: index.rst
docs/resources/: index.rst  upgrading.rst
edb/: _edgeql_parser.pyi  buildmeta.py
edb/api/: errors.txt
edb/cli/: __init__.py
edb/common/: _typing_inspect.py  adapter.py  asyncutil.py  checked.py  compiler.py  debug.py  devmode.py  lru.py  (+15 more)
edb/graphql-rewrite/: Cargo.toml  _graphql_rewrite.pyi
edb/graphql-rewrite/src/: lib.rs  py_entry.rs  py_token.rs  rewrite.rs  token_vec.rs
edb/graphql-rewrite/tests/: rewrite.rs
rust/pgrust/: Cargo.toml
rust/pgrust/examples/: connect.rs  dsn.rs
rust/pgrust/src/: lib.rs
rust/pgrust/src/connection/: flow.rs
rust/pgrust/src/connection/dsn/: params.rs  passfile.rs  raw_params.rs
rust/pgrust/src/errors/: mod.rs
rust/pgrust/src/handshake/: client_state_machine.rs
rust/pgrust/src/protocol/: mod.rs
rust/pgrust/src/python/: mod.rs
tests/: test_backend_connect.py  test_constraints.py  test_docs.py  test_dump_v2.py  test_dump_v4.py  test_dump_v5.py  test_dump_v6.py  test_dump_v7.py  test_edgeql_casts.py  test_edgeql_coalesce.py  test_edgeql_data_migration.py  test_edgeql_ddl.py  test_edgeql_delete.py  test_edgeql_enums.py  test_edgeql_explain.py  test_edgeql_expr_aliases.py  test_edgeql_expressions.py  test_edgeql_extensions.py  test_edgeql_filter.py  test_edgeql_for.py  test_edgeql_fts.py  test_edgeql_fts_schema.py  test_edgeql_functions.py  test_edgeql_functions_inline.py  test_edgeql_globals.py  test_edgeql_group.py  test_edgeql_insert.py  test_edgeql_internal_group.py  test_edgeql_introspection.py  test_edgeql_ir_card_inference.py  test_edgeql_ir_mult_inference.py  test_edgeql_json.py  test_edgeql_linkprops.py  test_edgeql_permissions.py  test_edgeql_policies.py  test_edgeql_rewrites.py  test_edgeql_scope.py  test_edgeql_select.py  test_edgeql_sql_codegen.py  test_edgeql_syntax.py  (+32 more)
(+551 files in other folders)
