[package]
name = "pgrust"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[features]
python_extension = ["pyo3/serde"]
optimizer = []

[dependencies]
gel-auth = { workspace = true, features = ["postgres"] }
gel-stream = { workspace = true, features = ["client"] }
gel-pg-protocol.workspace = true
gel-db-protocol.workspace = true
gel-dsn = { workspace = true, features = ["postgres"] }

pyo3.workspace = true
tracing.workspace = true

paste = "1"
derive_more = { version = "2", features = ["full"] }

[dev-dependencies]
tracing-subscriber.workspace = true
gel-pg-captive.workspace = true
gel-stream = { workspace = true, features = ["rustls", "client", "tokio"] }

scopeguard = "1"
pretty_assertions = "1.2.0"
test-log = { version = "0", features = ["trace"] }
rstest = "0"
clap = "4"
clap_derive = "4"
libc = "0.2.158"

[lib]
